src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_rrelu_with_noise_(value self, value noise, value lower, value upper, int training);
value atg_rrelu_with_noise_backward(value grad_output, value self, value noise, value lower, value upper, int training, int self_is_result);
value atg_rrelu_with_noise_backward_out(value out, value grad_output, value self, value noise, value lower, value upper, int training, int self_is_result);
value atg_rrelu_with_noise_functional(value self, value noise, value lower, value upper, int training);
value atg_rrelu_with_noise_out(value out, value self, value noise, value lower, value upper, int training);
value atg_rsqrt(value self);
value atg_rsqrt_(value self);
value atg_rsqrt_out(value out, value self);
value atg_rsub(value self, value other, value alpha);
value atg_rsub_scalar(value self, value other, value alpha);
value atg_rsub_scalar_out(value out, value self, value other, value alpha);
value atg_rsub_tensor_out(value out, value self, value other, value alpha);
value atg_scalar_tensor(value s, int options_kind, int options_device);
value atg_scalar_tensor_out(value out, value s);
value atg_scaled_dot_product_attention(value query, value key, value value_, value attn_mask, double dropout_p, int is_causal, value scale, int enable_gqa);
value atg_scatter(value self, int64_t dim, value index, value src);
value atg_scatter_(value self, int64_t dim, value index, value src);
value atg_scatter_add(value self, int64_t dim, value index, value src);
value atg_scatter_add_(value self, int64_t dim, value index, value src);
value atg_scatter_add_out(value out, value self, int64_t dim, value index, value src);
value atg_scatter_reduce(value self, int64_t dim, value index, value src, const char * reduce);
value atg_scatter_reduce_(value self, int64_t dim, value index, value src, const char * reduce);
value atg_scatter_reduce_out(value out, value self, int64_t dim, value index, value src, const char * reduce);
value atg_scatter_src_out(value out, value self, int64_t dim, value index, value src);
value atg_scatter_value(value self, int64_t dim, value index, value value_);
value atg_scatter_value_(value self, int64_t dim, value index, value value_);
value atg_scatter_value_out(value out, value self, int64_t dim, value index, value value_);
value atg_scatter_value_reduce(value self, int64_t dim, value index, value value_, const char * reduce);
value atg_scatter_value_reduce_(value self, int64_t dim, value index, value value_, const char * reduce);
value atg_scatter_value_reduce_out(value out, value self, int64_t dim, value index, value value_, const char * reduce);
value atg_searchsorted(value sorted_sequence, value self, int out_int32, int right, value side, value sorter);
value atg_searchsorted_scalar(value sorted_sequence, value self, int out_int32, int right, value side, value sorter);
value atg_searchsorted_scalar_out(value out, value sorted_sequence, value self, int out_int32, int right, value side, value sorter);
value atg_searchsorted_tensor_out(value out, value sorted_sequence, value self, int out_int32, int right, value side, value sorter);
value atg_segment_reduce(value data, const char * reduce, value lengths, value indices, value offsets, int64_t axis, int unsafe, value initial);
value atg_segment_reduce_out(value out, value data, const char * reduce, value lengths, value indices, value offsets, int64_t axis, int unsafe, value initial);
value atg_select(value self, int64_t dim, int64_t index);
value atg_select_backward(value grad_output, value input_sizes, int64_t dim, int64_t index);
value atg_select_backward_out(value out, value grad_output, value input_sizes, int64_t dim, int64_t index);
value atg_select_copy(value self, int64_t dim, int64_t index);
value atg_select_copy_int_out(value out, value self, int64_t dim, int64_t index);
value atg_select_scatter(value self, value src, int64_t dim, int64_t index);
value atg_select_scatter_out(value out, value self, value src, int64_t dim, int64_t index);
value atg_selu(value self);
value atg_selu_(value self);
value atg_set(value self);
value atg_set_(value self);
value atg_set_out(value out, value self);
value atg_set_requires_grad(value self, int r);
value atg_set_source_tensor(value self, value source);
value atg_set_source_tensor_(value self, value source);
value atg_set_source_tensor_out(value out, value self, value source);
value atg_set_source_tensor_storage_offset_(value self, value source, int64_t storage_offset, value size, value stride);
value atg_sgn(value self);
value atg_sgn_(value self);
value atg_sgn_out(value out, value self);
value atg_sigmoid(value self);
value atg_sigmoid_(value self);
value atg_sigmoid_backward(value grad_output, value output);
value atg_sigmoid_backward_grad_input(value grad_input, value grad_output, value output);
value atg_sigmoid_out(value out, value self);
value atg_sign(value self);
value atg_sign_(value self);
value atg_sign_out(value out, value self);
value atg_signbit(value self);
value atg_signbit_out(value out, value self);
value atg_silu(value self);
value atg_silu_(value self);
value atg_silu_backward(value grad_output, value self);
value atg_silu_backward_grad_input(value grad_input, value grad_output, value self);
value atg_silu_out(value out, value self);
value atg_sin(value self);
value atg_sin_(value self);
value atg_sin_out(value out, value self);
value atg_sinc(value self);
value atg_sinc_(value self);
value atg_sinc_out(value out, value self);
value atg_sinh(value self);
value atg_sinh_(value self);
value atg_sinh_out(value out, value self);
value atg_size(value self, int64_t dim);