src/bindings/torch_bindings_generated6.ml


  let stubs_rrelu_with_noise_ =
    foreign
      "atg_rrelu_with_noise_"
      (gc_tensor @-> gc_tensor @-> scalar @-> scalar @-> int @-> returning raw_tensor)
  ;;

  let stubs_rrelu_with_noise_backward =
    foreign
      "atg_rrelu_with_noise_backward"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_rrelu_with_noise_backward_out =
    foreign
      "atg_rrelu_with_noise_backward_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_rrelu_with_noise_functional =
    foreign
      "atg_rrelu_with_noise_functional"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> int
       @-> returning void)
  ;;

  let stubs_rrelu_with_noise_out =
    foreign
      "atg_rrelu_with_noise_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_rsqrt = foreign "atg_rsqrt" (gc_tensor @-> returning raw_tensor)
  let stubs_rsqrt_ = foreign "atg_rsqrt_" (gc_tensor @-> returning raw_tensor)

  let stubs_rsqrt_out =
    foreign "atg_rsqrt_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_rsub =
    foreign "atg_rsub" (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_rsub_scalar =
    foreign "atg_rsub_scalar" (gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_rsub_scalar_out =
    foreign
      "atg_rsub_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_rsub_tensor_out =
    foreign
      "atg_rsub_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_scalar_tensor =
    foreign "atg_scalar_tensor" (scalar @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_scalar_tensor_out =
    foreign "atg_scalar_tensor_out" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_scaled_dot_product_attention =
    foreign
      "atg_scaled_dot_product_attention"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> int
       @-> double
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_scatter =
    foreign
      "atg_scatter"
      (gc_tensor @-> int64_t @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_scatter_ =
    foreign
      "atg_scatter_"
      (gc_tensor @-> int64_t @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_scatter_add =
    foreign
      "atg_scatter_add"
      (gc_tensor @-> int64_t @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_scatter_add_ =
    foreign
      "atg_scatter_add_"
      (gc_tensor @-> int64_t @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_scatter_add_out =
    foreign
      "atg_scatter_add_out"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_scatter_reduce =
    foreign
      "atg_scatter_reduce"
      (gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> string
       @-> returning raw_tensor)
  ;;

  let stubs_scatter_reduce_ =
    foreign
      "atg_scatter_reduce_"
      (gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> string
       @-> returning raw_tensor)
  ;;

  let stubs_scatter_reduce_out =
    foreign
      "atg_scatter_reduce_out"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> string
       @-> returning raw_tensor)
  ;;
end

module C1 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs_scatter_src_out =
    foreign
      "atg_scatter_src_out"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_scatter_value =
    foreign
      "atg_scatter_value"
      (gc_tensor @-> int64_t @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_scatter_value_ =
    foreign
      "atg_scatter_value_"
      (gc_tensor @-> int64_t @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_scatter_value_out =
    foreign
      "atg_scatter_value_out"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_scatter_value_reduce =
    foreign
      "atg_scatter_value_reduce"
      (gc_tensor @-> int64_t @-> gc_tensor @-> scalar @-> string @-> returning raw_tensor)
  ;;

  let stubs_scatter_value_reduce_ =
    foreign
      "atg_scatter_value_reduce_"
      (gc_tensor @-> int64_t @-> gc_tensor @-> scalar @-> string @-> returning raw_tensor)
  ;;

  let stubs_scatter_value_reduce_out =
    foreign
      "atg_scatter_value_reduce_out"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> scalar
       @-> string
       @-> returning raw_tensor)
  ;;

  let stubs_searchsorted =
    foreign
      "atg_searchsorted"
      (gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> string
       @-> int
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_searchsorted_scalar =
    foreign
      "atg_searchsorted_scalar"
      (gc_tensor
       @-> scalar
       @-> int
       @-> int
       @-> string
       @-> int
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_searchsorted_scalar_out =
    foreign
      "atg_searchsorted_scalar_out"
      (gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> int
       @-> int
       @-> string
       @-> int
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_searchsorted_tensor_out =
    foreign
      "atg_searchsorted_tensor_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> string
       @-> int
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_segment_reduce =
    foreign
      "atg_segment_reduce"
      (gc_tensor
       @-> string
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_segment_reduce_out =
    foreign
      "atg_segment_reduce_out"
      (gc_tensor
       @-> gc_tensor
       @-> string
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_select =
    foreign "atg_select" (gc_tensor @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_select_backward =
    foreign
      "atg_select_backward"
      (gc_tensor @-> ptr int64_t @-> int @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_select_backward_out =
    foreign
      "atg_select_backward_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_select_copy =
    foreign "atg_select_copy" (gc_tensor @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_select_copy_int_out =
    foreign
      "atg_select_copy_int_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_select_scatter =
    foreign
      "atg_select_scatter"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_select_scatter_out =
    foreign
      "atg_select_scatter_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_selu = foreign "atg_selu" (gc_tensor @-> returning raw_tensor)
  let stubs_selu_ = foreign "atg_selu_" (gc_tensor @-> returning raw_tensor)
  let stubs_set = foreign "atg_set" (gc_tensor @-> returning raw_tensor)
  let stubs_set_ = foreign "atg_set_" (gc_tensor @-> returning raw_tensor)

  let stubs_set_out =
    foreign "atg_set_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_set_requires_grad =
    foreign "atg_set_requires_grad" (gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_set_source_tensor =
    foreign "atg_set_source_tensor" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_set_source_tensor_ =
    foreign "atg_set_source_tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_set_source_tensor_out =
    foreign
      "atg_set_source_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_set_source_tensor_storage_offset_ =
    foreign
      "atg_set_source_tensor_storage_offset_"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_sgn = foreign "atg_sgn" (gc_tensor @-> returning raw_tensor)
  let stubs_sgn_ = foreign "atg_sgn_" (gc_tensor @-> returning raw_tensor)

  let stubs_sgn_out =
    foreign "atg_sgn_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_sigmoid = foreign "atg_sigmoid" (gc_tensor @-> returning raw_tensor)
  let stubs_sigmoid_ = foreign "atg_sigmoid_" (gc_tensor @-> returning raw_tensor)

  let stubs_sigmoid_backward =
    foreign "atg_sigmoid_backward" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_sigmoid_backward_grad_input =
    foreign
      "atg_sigmoid_backward_grad_input"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_sigmoid_out =
    foreign "atg_sigmoid_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_sign = foreign "atg_sign" (gc_tensor @-> returning raw_tensor)
  let stubs_sign_ = foreign "atg_sign_" (gc_tensor @-> returning raw_tensor)

  let stubs_sign_out =
    foreign "atg_sign_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_signbit = foreign "atg_signbit" (gc_tensor @-> returning raw_tensor)

  let stubs_signbit_out =
    foreign "atg_signbit_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_silu = foreign "atg_silu" (gc_tensor @-> returning raw_tensor)
  let stubs_silu_ = foreign "atg_silu_" (gc_tensor @-> returning raw_tensor)

  let stubs_silu_backward =
    foreign "atg_silu_backward" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_silu_backward_grad_input =
    foreign
      "atg_silu_backward_grad_input"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_silu_out =
    foreign "atg_silu_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_sin = foreign "atg_sin" (gc_tensor @-> returning raw_tensor)
  let stubs_sin_ = foreign "atg_sin_" (gc_tensor @-> returning raw_tensor)

  let stubs_sin_out =
    foreign "atg_sin_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_sinc = foreign "atg_sinc" (gc_tensor @-> returning raw_tensor)
  let stubs_sinc_ = foreign "atg_sinc_" (gc_tensor @-> returning raw_tensor)

  let stubs_sinc_out =
    foreign "atg_sinc_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_sinh = foreign "atg_sinh" (gc_tensor @-> returning raw_tensor)
  let stubs_sinh_ = foreign "atg_sinh_" (gc_tensor @-> returning raw_tensor)

  let stubs_sinh_out =
    foreign "atg_sinh_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_size = foreign "atg_size" (gc_tensor @-> int64_t @-> returning int64_t)
